@@ -1,4 +1,4 @@
-# Copyright (C) 2004, 2005 g10 Code GmbH
+# Copyright (C) 2005 g10 Code GmbH
 #
 # This file is part of Poldi.
 #
@@ -17,7 +17,5 @@
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 # 02111-1307, USA
 
-SUBDIRS = src doc conf
-
 install-conf-skeleton:
-	$(MAKE) -C conf install-conf-skeleton
+	$(INSTALL) -d $(POLDI_CONF_DIRECTORY)/keys
