@@ -7,6 +7,7 @@
 	/lib/security to set PAM_MODULE_DIRECTORY accordingly.
 	* THANKS: Updated.
 	* Makefile.am: Remove install-pam-module target.
+	(install-conf-skeleton): New target: install-conf-skeleton.
 
 2005-09-25  Moritz Schulte  <moritz@g10code.com>
 
